[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/Enemies/enemy3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/death.png" type="Texture" id=2]
[ext_resource path="res://Voxiz.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/Hit.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135.275, 330.801 )

[sub_resource type="Animation" id=3]
resource_name = "moving"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ) ]
}

[node name="Voxiz" type="Area2D" groups=[
"enemies",
]]
position = Vector2( 628.788, 335.872 )
scale = Vector2( 0.32, 0.28 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "moving"
playback_speed = 0.5
anims/moving = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Voxiz_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
